--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     font-weight: 200 900;
     font-stretch: 75% 125%;
 }
+
 @font-face {
     font-family: 'Mona Sans Regular';
     src:
@@ -18,6 +19,7 @@
 :root {
     --background: #101010;
     --background-two: #0d0d0d;
+    --background-three: #0f0f0f;
     --foreground: #f5f6f7;
     --theme: #5865F2;
     --success: #5cb85c;
@@ -55,13 +57,7 @@ img {
     -webkit-user-select: none;
 }
 
-grammarly-desktop-integration {
-    display: none;
-}
-grammarly-underline {
-    display: none;
-}
-grammarly-dictionary-card {
+grammarly-extension, grammarly-desktop-integration, grammarly-underline, grammarly-dictionary-card, grammarly-popups {
     display: none;
 }
 
@@ -72,6 +68,7 @@ grammarly-dictionary-card {
     background-color: var(--background-two);
     padding: 2.5vh 12.5vw;
 }
+
 .header-logo {
     font-size: min(10vw, 24px);
     font-weight: 900;
@@ -79,27 +76,32 @@ grammarly-dictionary-card {
     font-family: 'Mona Sans Header';
     text-transform: uppercase;
 }
+
 .header-logo-yellow {
     display: inline;
     outline: 0;
     color: var(--yellow);
 }
+
 .header-logo-green {
     display: inline;
     outline: 0;
     color: var(--green);
 }
+
 .header-logo-blue {
     display: inline;
     outline: 0;
     color: var(--blue);
 }
+
 .header-logo-white {
     display: inline;
     outline: 0;
     color: var(--white);
     text-transform: lowercase;
 }
+
 .header a {
     margin-left: 1em;
     font-size: min(10vw, 24px);
@@ -109,32 +111,53 @@ grammarly-dictionary-card {
     text-decoration: none;
     cursor: pointer;
 }
+
 .header a:hover {
     text-decoration: underline;
 }
 
-.main {
+#notForums .main {
     padding: 2.5vh 12.5vw;
 }
+
 .main-vpns {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin: 0 0 5% 0;
 }
+
 .main-links {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin: 0 0 5% 0;
 }
+
 .main-games {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     margin: 0 0 5% 0;
 }
+
 .main-item {
     background-color: var(--background-two);
     box-shadow: 0 0 10px var(--foreground);
-    padding: 5%;
+    padding: 1.25em;
     border-radius: 10px;
     margin: 2.5%;
+}
+
+.error {
+    display: none;
+    font-size: 2em;
+    margin: 1em;
+}
+
+@media only screen and (max-width: 1020px) {
+    .error {
+        display: block;
+    }
+
+    .body {
+        display: none;
+    }
 }
