--- a/sound/styles.css
+++ b/sound/styles.css
@@ -1,7 +1,29 @@
 @import url(../styles.css);
 
+.main-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .main-sound {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     margin: 0 0 5% 0;
+}
+.sound-text {
+    font-size: 1.3em;
+    margin: 0 0 0.75em 0;
+}
+.sound-controlls {
+    height: 2em;
+}
+.sound-controlls button {
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.sound-controlls button svg {
+    height: 100%;
+    fill: var(--foreground);
 }
