--- a/settings/styles.css
+++ b/settings/styles.css
@@ -49,3 +49,19 @@
     border: none;
     cursor: pointer;
 }
+
+.settings-options-select {
+    display: block;
+    width: 50%;
+    padding: 0.5em;
+    margin: 1.25% 0;
+    border-radius: 10px;
+    background-color: var(--background-two);
+    box-shadow: 0 0 10px var(--foreground);
+    outline: none;
+    cursor: pointer;
+}
+
+.settings-options-select option {
+    padding: 0.5em;
+}
