--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ footer {
     box-shadow: 0 0 10px var(--foreground);
     padding: 20px;
     border-radius: 10px;
-    margin: 5%;
+    margin: 5% 5% 5% 0;
 }
 
 .main-item.game {
